--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^8.2.0",
     "recharts": "^2.1.9",
     "swr": "^1.3.0",
     "tw-elements": "^1.0.0-alpha12",
