--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
